--- a/fend-animal-trading-cards-master/styles.css
+++ b/fend-animal-trading-cards-master/styles.css
@@ -9,6 +9,7 @@
     flex-direction: column;
     padding: 10px;
     background-color: rgba(236, 226, 236, 0.94);
+    text-align: justify;
    
     -webkit-box-shadow: 6px 8px 6px 0px rgba(156,156,156,0.52);
     -moz-box-shadow: 6px 8px 6px 0px rgba(156,156,156,0.52);
